--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vendetta-plus/vendetta-plus",
+    "name": "vendetta-plus/core",
     "type": "library",
     "description": "",
     "homepage": "https://github.com/vendetta-plus/vendetta-plus",
